--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -45,6 +45,10 @@
 
     console.table(born);
 
+    const born1 = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1599));
+
+    console.table(born1);
+
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
 
