return array with inventors full names

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -45,12 +45,18 @@
 
     console.table(born);
 
+    // OR:
+
     const born1 = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year <= 1599));
 
     console.table(born1);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+
+    const names = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+
+    console.log(names)
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
