--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -61,6 +61,16 @@
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    const sorted = inventors.sort(function(firstPerson, secondPerson) {
+      if(firstPerson.year > secondPerson.year) {
+        return 1;
+      } else {
+        return -1;
+      }
+    });
+
+    console.table(sorted);
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
