sort inventors by years lived

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -88,6 +88,15 @@
 
     // 5. Sort the inventors by years lived
 
+    const oldest = inventors.sort(function(first, second) {
+      const firstGuy = first.passed - first.year;
+      const secondGuy = second.passed - second.year;
+
+      return firstGuy > secondGuy ? -1 : 1;
+    });
+
+    console.table(oldest);
+
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
