--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -131,6 +131,10 @@
   <script>
     const panels = document.querySelectorAll('.panels');
 
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+
   </script>
 
 
