--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -129,11 +129,13 @@
   </div>
 
   <script>
-    const panels = document.querySelectorAll('.panels');
+    const panels = document.querySelectorAll('.panel');
 
     function toggleOpen() {
       this.classList.toggle('open');
     }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
 
   </script>
 
