--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -136,7 +136,7 @@
     }
 
     panels.forEach(panel => panel.addEventListener('click', toggleOpen));
-
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
 
 
