--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -135,6 +135,10 @@
       this.classList.toggle('open');
     }
 
+    function toggleActive() {
+      this.classList.toggle('open-active');
+    }
+
     panels.forEach(panel => panel.addEventListener('click', toggleOpen));
     panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
   </script>
