--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -135,8 +135,9 @@
       this.classList.toggle('open');
     }
 
-    function toggleActive() {
-      this.classList.toggle('open-active');
+    function toggleActive(e) {
+      if(e.propertyName.includes('flex'))
+        this.classList.toggle('open-active');
     }
 
     panels.forEach(panel => panel.addEventListener('click', toggleOpen));
