--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -42,6 +42,11 @@
 
     console.log({allAdults});
     // Array.prototype.find()
+
+    const comment = comments.find(comment => comment.id === 823423);
+
+    console.log(comment);
+    
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
