--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -14,6 +14,7 @@
   ctx.strokeStyle = '#BADA55';
   ctx.lineJoin = 'round';
   ctx.lineCap = 'round';
+  ctx.lineWidth = 100;
 
   let isDrawing = false;
   let lastX = 0;
@@ -24,11 +25,12 @@
 
   function draw(e) {
     if(!isDrawing) return;
-
     console.log(e);
     ctx.strokeStyle = `hsl(${hue}, 100%, 50%)`;
     ctx.beginPath();
+
     ctx.moveTo(lastX, lastY);
+
     ctx.lineTo(e.offsetX, e.offsetY);
     ctx.stroke();
     [lasX, lastY] = [e.offsetX, e.offsetY]
